--- a/COVID_19_Detection.ipynb
+++ b/COVID_19_Detection.ipynb
@@ -26,6 +26,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oczI-pshfqLX"
+      },
+      "source": [
+        "# **COVID-19 Detection**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6rcumo5nbT7s",
@@ -35,6 +44,7 @@
         "outputId": "d80cc85f-0842-4e03-e244-e5560589dfff"
       },
       "source": [
+        "# Mounting into our Google Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
@@ -55,7 +65,7 @@
         "id": "K9ROhJRuck0z"
       },
       "source": [
-        "#Importaciones\n",
+        "# Importing required libraries\n",
         "import random, os, shutil\n",
         "import copy\n",
         "import imageio\n",
@@ -73,11 +83,20 @@
         "id": "9P6HMYmbdBVf"
       },
       "source": [
-        "#Creación del directorio que almacenará los conjuntos de entrenamiento y validación\n",
+        "# Creation of the directory that will store the training and validation datasets\n",
         "os.mkdir('COVID-19_Dataset')"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qXjLwrifgmSY"
+      },
+      "source": [
+        "### **Extracting the data from Google Drive**"
+      ]
     },
     {
       "cell_type": "code",
@@ -101,7 +120,7 @@
         "id": "sDGU7sI6JlPY"
       },
       "source": [
-        "# **Referenciamos los conjuntos de entrenamiento y validación**"
+        "### **Storing the dataset paths**"
       ]
     },
     {
@@ -122,7 +141,7 @@
         "id": "GBilhQPaeRPN"
       },
       "source": [
-        "# **Sistema de detección # 1**"
+        "# ***Method #1 (without Transfer Learning)***"
       ]
     },
     {
@@ -131,7 +150,7 @@
         "id": "ysYRWbXVQ_lV"
       },
       "source": [
-        "# **Definición de la arquitectura**"
+        "## **Defining the architecture of the CNN**"
       ]
     },
     {
@@ -221,7 +240,7 @@
         "id": "9BHBw-s_KD-N"
       },
       "source": [
-        "# **Compilación**"
+        "## **Compiling the model**"
       ]
     },
     {
@@ -232,7 +251,7 @@
       "source": [
         "from keras import optimizers\n",
         "model.compile(loss='binary_crossentropy',\n",
-        "              optimizer='adam', #SGD\n",
+        "              optimizer='adam',\n",
         "              metrics=['acc'])"
       ],
       "execution_count": null,
@@ -244,7 +263,7 @@
         "id": "HLFUQRRtKH8F"
       },
       "source": [
-        "# **Definición de los generadores**"
+        "## **Generators definition**"
       ]
     },
     {
@@ -257,7 +276,7 @@
         "outputId": "f69f5bf0-d686-41f5-b43f-a55f0db22a3d"
       },
       "source": [
-        "#Using ImageDataGenerator to read images from directories\n",
+        "# Using ImageDataGenerator to read images from directories\n",
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "\n",
         "train_datagen = ImageDataGenerator(rescale=1./255, \n",
@@ -269,7 +288,7 @@
         "\n",
         "train_generator = train_datagen.flow_from_directory(\n",
         "        train_dir, # Target directory\n",
-        "        target_size=(224, 224), # All images are resized from 240x320 to 72x96\n",
+        "        target_size=(224, 224),\n",
         "        batch_size= 32, \n",
         "        color_mode='rgb',\n",
         "        class_mode='binary')\n",
@@ -300,7 +319,7 @@
         "id": "R-bRqMJZKLS9"
       },
       "source": [
-        "# **Entrenamiento**"
+        "## **Training**"
       ]
     },
     {
@@ -313,10 +332,10 @@
         "outputId": "32fba16e-bbf5-4ec3-b874-cb1f95417ec5"
       },
       "source": [
-        "#Training and validation stages\n",
+        "# Training and validation stages\n",
         "history = model.fit(\n",
         "      train_generator,\n",
-        "      steps_per_epoch=7, #70\n",
+        "      steps_per_epoch=7,\n",
         "      epochs= 10,\n",
         "      validation_data=validation_generator,\n",
         "      validation_steps=60)"
@@ -358,7 +377,7 @@
         "id": "8D56Gvl6HS0V"
       },
       "source": [
-        "# **Curvas de precisión y pérdida**"
+        "## **Accuracy and loss graphs**"
       ]
     },
     {
@@ -431,7 +450,7 @@
         "id": "8Zd-LQyEeHzV"
       },
       "source": [
-        "# **Re-entrenamiento del modelo**"
+        "## **Retraining the model**"
       ]
     },
     {
@@ -570,7 +589,7 @@
         "id": "3VQF2x6pzLh2"
       },
       "source": [
-        "#Guardamos el modelo\n",
+        "# Saving the model\n",
         "model.save('/content/drive/My Drive/COVID-19_Dataset/covid_detection1.h5')"
       ],
       "execution_count": null,
@@ -582,7 +601,7 @@
         "id": "DblYBUuOKRGN"
       },
       "source": [
-        "# **Evaluación del desempeño mediante matriz de confusión y F1**"
+        "## **Evaluating the model**"
       ]
     },
     {
@@ -591,7 +610,7 @@
         "id": "F6YOmgvnKRGY"
       },
       "source": [
-        "**Matriz de confusión**"
+        "### **Confusion matrix**"
       ]
     },
     {
@@ -815,7 +834,7 @@
         "id": "M89n5NZ6_Mi2"
       },
       "source": [
-        "**Calculamos la métrica F1**"
+        "### **Calculating F1 score**"
       ]
     },
     {
@@ -854,7 +873,7 @@
         "id": "z7DOcyrExwDZ"
       },
       "source": [
-        "# **Sistema de detección # 2 (Basado en transfer learning)**"
+        "# **Method # 2 (Transfer Learning based)**"
       ]
     },
     {
@@ -863,7 +882,7 @@
         "id": "-7WWbw6JJp_G"
       },
       "source": [
-        "**Carga de la arquitectura VGG16**"
+        "## **Loading VGG16 architecture**"
       ]
     },
     {
@@ -949,7 +968,7 @@
         "id": "8Q6SaotDJvml"
       },
       "source": [
-        "**Congelamos y descongelamos ciertas capas (Fine-tuning)**"
+        "## **Freezing some VGG16 layers**"
       ]
     },
     {
@@ -1033,7 +1052,7 @@
         "id": "Uox0ZSabxzMY"
       },
       "source": [
-        "# **Definición de la arquitectura (incluyendo el módulo de transfer learning)**"
+        "## **Defining the architecture of the CNN (including the Transfer Learning module)**"
       ]
     },
     {
@@ -1094,7 +1113,7 @@
         "id": "I21WuD4AxzMj"
       },
       "source": [
-        "# **Compilación**"
+        "## **Compiling the model**"
       ]
     },
     {
@@ -1117,7 +1136,7 @@
         "id": "2IZmJDfQyNCL"
       },
       "source": [
-        "# **Entrenamiento**"
+        "## **Training**"
       ]
     },
     {
@@ -1175,7 +1194,7 @@
         "id": "Taa4lx7iLQSP"
       },
       "source": [
-        "# **Curvas de precisión y pérdida**"
+        "## **Accuracy and loss graphs**"
       ]
     },
     {
@@ -1248,7 +1267,7 @@
         "id": "8jdf8oDqLBvr"
       },
       "source": [
-        "# **Re-entrenamiento**"
+        "## **Retraining the model**"
       ]
     },
     {
@@ -1317,7 +1336,7 @@
         "outputId": "aeea133a-7eb5-4fbd-9172-e434f03dee9f"
       },
       "source": [
-        "#Training and validation stages\n",
+        "# Training and validation stages\n",
         "history = model.fit(\n",
         "      train_generator,\n",
         "      steps_per_epoch=7, #70\n",
@@ -1355,7 +1374,7 @@
         "id": "mBvrrq73LYfq"
       },
       "source": [
-        "#Guardamos el modelo\n",
+        "# Saving the model in Google Drive\n",
         "model.save('/content/drive/My Drive/COVID-19_Dataset/covid_detection2.h5')"
       ],
       "execution_count": null,
@@ -1367,7 +1386,7 @@
         "id": "9dK9mmEfLg8N"
       },
       "source": [
-        "# **Evaluación del desempeño mediante matriz de confusión y F1**"
+        "# **Evaluating the model**"
       ]
     },
     {
@@ -1376,7 +1395,7 @@
         "id": "qX3HiMfQLg8P"
       },
       "source": [
-        "**Matriz de confusión**"
+        "### **Confusion Matrix**"
       ]
     },
     {
@@ -1459,7 +1478,7 @@
         "id": "fEVXHvCVLg8Z"
       },
       "source": [
-        "**Calculamos la métrica F1**"
+        "### **Calculating F1 score**"
       ]
     },
     {
@@ -1491,24 +1510,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9yXqrBvqLyiE"
-      },
-      "source": [
-        "# **Referencias**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0UFH-iV_L7Yo"
-      },
-      "source": [
-        "La base de datos usada en este Notebook, así como la arquitectura y los hiperparámetros correspondientes a la primera CNN, fueron tomados del siguiente sitio web: https://towardsdatascience.com/detecting-covid-19-using-deep-learning-262956b6f981."
       ]
     }
   ]
